--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,5 +12,5 @@ $text-light: #FFFFFF;
 $text-dark: #211F25;
 
 // Misc
-$wave-movement-speed: 60s;
+$wave-movement-speed: 45s;
 
